[package]
name = "rushttp"
version = "0.2.0"
authors = ["Jonathan 'theJPster' Pallant <git@thejpster.org.uk>"]
description = "rushttp is a simple HTTP library for rust, written as a learning excercise for the author."
homepage = "http://thejpster.org.uk"
repository = "https://github.com/thejpster/rushttp"
readme = "README.md"
